# Sonica_1

./: .gitattributes  .gitignore  CONTRIBUTING.md  EXAMPLE_ISSUE.md  LICENSE  README.md  project_report.md
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  nixpacks.toml  songs.db
backend/src/: api.rs  error.rs  fingerprint.rs  lib.rs  main.rs  storage.rs  types.rs  watcher.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AudioSourceToggle.tsx  Header.tsx  ListenButton.tsx  Marquee.tsx  ResultCard.tsx
frontend/src/hooks/: useAudioRecorder.ts  useWebSocketAudio.ts
frontend/src/services/: api.ts
